# grad-visit-scheduler

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  scheduler.py
.github/workflows/: ci.yml  release.yml
docs/: advanced_customization.md  api.md  conf.py  formulation.md  index.md  installation.md  movement.md  quickstart.md  releasing.md
examples/: README.md  config_basic.yaml  config_formulation.yaml  config_legacy.yaml  config_one_building.yaml  config_shifted_a_first.yaml  config_shifted_abc_earlier_nonoverlap.yaml  config_shifted_b_first.yaml  config_shifted_nonoverlap_auto.yaml  config_shifted_starts.yaml  config_shifted_xyz_earlier_nonoverlap.yaml  config_three_buildings_close.yaml  config_three_buildings_shifted_nonoverlap.yaml  config_three_buildings_travel_delay.yaml  config_two_buildings_close.yaml  data_fake_visitors.csv  data_formulation_visitors.csv  faculty_example.yaml  faculty_formulation.yaml  faculty_one_building.yaml  faculty_three_buildings.yaml  large_example_colab.ipynb
scripts/: run_building_configuration_examples.py  run_example.py  run_formulation_example.py  run_shifted_start_comparison.py  run_top_n_example.py
src/grad_visit_scheduler/: __init__.py  config.py  core.py  data.py  export.py  plotting.py
tests/: conftest.py  test_config.py  test_core_edge_cases.py  test_errors.py  test_hard_constraints_api.py  test_movement_examples_docs_regression.py  test_movement_nonoverlap.py  test_plotting_module.py  test_scheduler_data.py  test_solution_result_api.py  test_solver_optional.py
