[project]
name = "grad-visitor-scheduler"
version = "0.2.0rc1"
description = "MILP-based scheduling for graduate visit days"
requires-python = ">=3.9"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["scheduling", "milp", "pyomo", "optimization"]
authors = [
  { name = "Dowling Lab" }
]
dependencies = [
  "pandas",
  "numpy",
  "pyomo",
  "highspy",
  "matplotlib",
  "seaborn",
  "pyyaml",
  "python-docx",
]

[project.optional-dependencies]
cbc = []
gurobi = []
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
